@@ -27,20 +27,17 @@ import static de.tudarmstadt.ukp.clarin.webanno.model.SourceDocumentState.CURATI
 import static de.tudarmstadt.ukp.inception.support.WebAnnoConst.CURATION_USER;
 import static java.util.Collections.emptyList;
 import static java.util.Collections.unmodifiableList;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toSet;
 
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
-import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.Validate;
 import org.apache.commons.lang3.builder.EqualsBuilder;
@@ -50,6 +47,8 @@ import org.apache.uima.cas.CAS;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.context.event.EventListener;
+import org.springframework.core.Ordered;
+import org.springframework.core.annotation.Order;
 import org.springframework.security.core.session.SessionDestroyedEvent;
 import org.springframework.security.core.session.SessionRegistry;
 import org.springframework.transaction.annotation.Transactional;
@@ -60,9 +59,7 @@ import de.tudarmstadt.ukp.clarin.webanno.model.SourceDocument;
 import de.tudarmstadt.ukp.clarin.webanno.security.UserDao;
 import de.tudarmstadt.ukp.clarin.webanno.security.model.User;
 import de.tudarmstadt.ukp.inception.annotation.events.DocumentOpenedEvent;
-import de.tudarmstadt.ukp.inception.curation.config.CurationServiceAutoConfiguration;
 import de.tudarmstadt.ukp.inception.curation.merge.MergeStrategyFactory;
-import de.tudarmstadt.ukp.inception.curation.merge.strategy.MergeStrategy;
 import de.tudarmstadt.ukp.inception.curation.model.CurationSettings;
 import de.tudarmstadt.ukp.inception.curation.model.CurationSettingsId;
 import de.tudarmstadt.ukp.inception.curation.model.CurationWorkflow;
@@ -73,12 +70,13 @@ import de.tudarmstadt.ukp.inception.curation.sidebar.CurationSidebarProperties;
 import de.tudarmstadt.ukp.inception.documents.api.DocumentService;
 import de.tudarmstadt.ukp.inception.project.api.ProjectService;
 import de.tudarmstadt.ukp.inception.rendering.editorstate.AnnotatorState;
+import de.tudarmstadt.ukp.inception.ui.curation.sidebar.config.CurationSidebarAutoConfiguration;
 import jakarta.persistence.EntityManager;
 
 /**
  * <p>
  * This class is exposed as a Spring Component via
- * {@link CurationServiceAutoConfiguration#curationService}.
+ * {@link CurationSidebarAutoConfiguration#curationSidebarService}.
  * </p>
  */
 public class CurationSidebarServiceImpl
@@ -147,7 +145,8 @@ public class CurationSidebarServiceImpl
             if (!(aOther instanceof CurationSessionKey)) {
                 return false;
             }
-            CurationSessionKey castOther = (CurationSessionKey) aOther;
+
+            var castOther = (CurationSessionKey) aOther;
             return new EqualsBuilder().append(username, castOther.username)
                     .append(projectId, castOther.projectId).isEquals();
         }
@@ -179,7 +178,7 @@ public class CurationSidebarServiceImpl
                 users = setting.getSelectedUserNames().stream()
                         .map(username -> userRegistry.get(username))
                         .filter(user -> projectService.hasAnyRole(user, project)) //
-                        .collect(toList());
+                        .toList();
             }
             state = new CurationSession(setting.getCurationUserName(), users);
         }
@@ -190,20 +189,19 @@ public class CurationSidebarServiceImpl
 
     private List<CurationSettings> queryDBForSetting(String aSessionOwner, long aProjectId)
     {
-        Validate.notBlank(aSessionOwner, "User must be specified");
-        Validate.notNull(aProjectId, "project must be specified");
+        Validate.notBlank(aSessionOwner, "Session owner must be specified");
+        Validate.notNull(aProjectId, "Project must be specified");
 
         var query = "FROM " + CurationSettings.class.getName() //
                 + " o WHERE o.username = :username " //
                 + "AND o.projectId = :projectId";
 
-        var settings = entityManager //
+        return entityManager //
                 .createQuery(query, CurationSettings.class) //
                 .setParameter("username", aSessionOwner) //
                 .setParameter("projectId", aProjectId) //
                 .setMaxResults(1) //
                 .getResultList();
-        return settings;
     }
 
     @Transactional
@@ -228,7 +226,7 @@ public class CurationSidebarServiceImpl
         synchronized (sessions) {
             var session = sessions.get(new CurationSessionKey(aSessionOwner, aProjectId));
             if (session == null) {
-                return Collections.emptyList();
+                return emptyList();
             }
 
             var selectedUsers = session.getSelectedUsers();
@@ -244,13 +242,13 @@ public class CurationSidebarServiceImpl
         synchronized (sessions) {
             var session = sessions.get(new CurationSessionKey(aSessionOwner, aProject.getId()));
             if (session == null) {
-                return Collections.emptyList();
+                return emptyList();
             }
 
             var selectedUsers = session.getSelectedUsers();
 
             if (selectedUsers == null || selectedUsers.isEmpty()) {
-                return new ArrayList<>();
+                return emptyList();
             }
 
             var finishedUsers = curationDocumentService.listCuratableUsers(aDocument);
@@ -267,12 +265,16 @@ public class CurationSidebarServiceImpl
         return curationDocumentService.listCuratableUsers(aDocument).stream()
                 .filter(user -> !user.getUsername().equals(aSessionOwner)
                         || curationTarget.equals(CURATION_USER))
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    /**
+     * @return CAS associated with curation doc for the given user
+     */
+    // REC: Do we really needs this? Why not save via the AnnotationPage facilities? Or at least
+    // the curation target should already be set in the annotator state, so why not rely on that?
     @Transactional
-    @Override
-    public Optional<CAS> retrieveCurationCAS(String aSessionOwner, long aProjectId,
+    private Optional<CAS> retrieveCurationCAS(String aSessionOwner, long aProjectId,
             SourceDocument aDoc)
         throws IOException
     {
@@ -284,11 +286,13 @@ public class CurationSidebarServiceImpl
         return Optional.of(documentService.readAnnotationCas(aDoc, curationUser));
     }
 
+    /**
+     * Write to CAS associated with curation doc for the given user and update timestamp
+     */
     // REC: Do we really needs this? Why not save via the AnnotationPage facilities? Or at least
     // the curation target should already be set in the annotator state, so why not rely on that?
     @Transactional
-    @Override
-    public void writeCurationCas(CAS aTargetCas, AnnotatorState aState, long aProjectId)
+    private void writeCurationCas(CAS aTargetCas, AnnotatorState aState, long aProjectId)
         throws IOException
     {
         User curator;
@@ -306,9 +310,11 @@ public class CurationSidebarServiceImpl
                 .ifPresent(aState::setAnnotationDocumentTimestamp);
     }
 
+    /**
+     * Store which name the curated document should be associated with
+     */
     @Transactional
-    @Override
-    public void setCurationTarget(String aSessionOwner, Project aProject, boolean aOwnDocument)
+    private void setCurationTarget(String aSessionOwner, Project aProject, boolean aOwnDocument)
     {
         synchronized (sessions) {
             var session = sessions.get(new CurationSessionKey(aSessionOwner, aProject.getId()));
@@ -373,6 +379,8 @@ public class CurationSidebarServiceImpl
                 listCuratableUsers(aSessionOwner, aDocument));
     }
 
+    // Set order so this is handled before session info is removed from sessionRegistry
+    @Order(Ordered.HIGHEST_PRECEDENCE)
     @EventListener
     @Transactional
     public void onSessionDestroyed(SessionDestroyedEvent event)
@@ -447,9 +455,9 @@ public class CurationSidebarServiceImpl
 
     private void closeAllSessions(User aSessionOwner)
     {
-        projectService.listAccessibleProjects(aSessionOwner).stream() //
-                .map(Project::getId) //
-                .forEach(pId -> closeSession(aSessionOwner.getUsername(), pId));
+        synchronized (sessions) {
+            sessions.keySet().removeIf(k -> k.username.equals(aSessionOwner.getUsername()));
+        }
     }
 
     @Transactional
@@ -519,17 +527,9 @@ public class CurationSidebarServiceImpl
                         && sourceDoc.getState().equals(CURATION_FINISHED));
     }
 
-    @Override
-    public MergeStrategyFactory<?> merge(AnnotatorState aState, String aCurator,
-            Collection<User> aUsers, boolean aClearTargetCas)
-        throws IOException, UIMAException
-    {
-        var workflow = curationService.readOrCreateCurationWorkflow(aState.getProject());
-        return merge(aState, workflow, aCurator, aUsers, aClearTargetCas);
-    }
-
     @SuppressWarnings({ "rawtypes", "unchecked" })
     @Override
+    @Transactional
     public MergeStrategyFactory<?> merge(AnnotatorState aState, CurationWorkflow aWorkflow,
             String aCurator, Collection<User> aUsers, boolean aClearTargetCas)
         throws IOException, UIMAException
@@ -537,15 +537,6 @@ public class CurationSidebarServiceImpl
         MergeStrategyFactory factory = curationService.getMergeStrategyFactory(aWorkflow);
         var traits = factory.readTraits(aWorkflow);
         var mergeStrategy = factory.makeStrategy(traits);
-        merge(aState, mergeStrategy, aCurator, aUsers, aClearTargetCas);
-        return factory;
-    }
-
-    @Override
-    public void merge(AnnotatorState aState, MergeStrategy aStrategy, String aCurator,
-            Collection<User> aUsers, boolean aClearTargetCas)
-        throws IOException, UIMAException
-    {
         var doc = aState.getDocument();
         var aTargetCas = retrieveCurationCAS(aCurator, doc.getProject().getId(), doc).orElseThrow(
                 () -> new IllegalArgumentException("No target CAS configured in curation state"));
@@ -556,12 +547,13 @@ public class CurationSidebarServiceImpl
         // deleting the users annotations!!!), currently fixed by warn message to user
         // prepare merged CAS
         curationMergeService.mergeCasses(doc, aState.getUser().getUsername(), aTargetCas, userCases,
-                aStrategy, aState.getAnnotationLayers(), aClearTargetCas);
+                mergeStrategy, aState.getAnnotationLayers(), aClearTargetCas);
 
         // write back and update timestamp
         writeCurationCas(aTargetCas, aState, doc.getProject().getId());
 
         LOG.debug("Merge done");
+        return factory;
     }
 
     private class CurationSession
